# brood

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  agent-intake.json  llms-full.txt  llms.txt  pyproject.toml
.github/: copilot-instructions.md
brood.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
brood_engine/: __init__.py  cli.py  cli_progress.py  engine.py  reasoning.py  utils.py
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: README.md  aesthetic.md  agent_quickstart.md  aip-1.schema.json  aip_aws_setup.md  benchmark-playbook.md  brood-fit-guide.md  desktop.md  macos-local-private-image-editing.md  mother_gold_data_seed_guide.md  param_forge_reference.md  prompt-diet-notes.md  realtime_canvas_intent_generation_flow.md  realtime_canvas_overview.md  realtime_canvas_user_benefits_story.md  realtime_intent_notes_2026-02-21.md  realtime_intent_review_prompt.md  reference-first-image-editing.md  style-fit-screening-outline.md  target_user_harness.scenarios.sample.json  target_user_harness.schema.json  target_user_panel_prompt.md  visibility-kpis.md  visual_prompting_v0.md  why-brood-matrix.md
images_gemini_wire_subject_20260215_201450/: manifest.json
images_gemini_wire_subject_20260215_201751/: manifest.json
images_gemini_wire_subject_20260215_202050/: manifest.json
images_gemini_wire_subject_20260215_202330/: manifest.json
images_gemini_wire_subject_20260215_202748/: manifest.json
images_gemini_wire_subject_20260215_202945/: manifest.json
rust_engine/: README.md
scripts/: aip_build_packs.py  (+17 more)
(+176 files in other folders)
