[package]
name = "brood"
version = "0.2.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "1.5", features = ["api-all"] }
portable-pty = "0.8"
chrono = { version = "0.4", features = ["clock"] }
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
